--- a/ZCoin/src/main/webapp/WEB-INF/web.xml
+++ b/ZCoin/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,10 @@
 <servlet-class>signup.SignupServlet</servlet-class>
 </servlet>
 <servlet>
+<servlet-name>Manage</servlet-name>
+<servlet-class>manage.ManageServlet</servlet-class>
+</servlet>
+<servlet>
 <servlet-name>Add</servlet-name>
 <servlet-class>add.AddServlet</servlet-class>
 </servlet>
@@ -24,9 +28,17 @@
 <servlet-name>Change</servlet-name>
 <servlet-class>password.ChangePassword</servlet-class>
 </servlet>
+<servlet>
+<servlet-name>Transaction</servlet-name>
+<servlet-class>transaction.TransactionServlet</servlet-class>
+</servlet>
 <servlet-mapping>
 <servlet-name>Login</servlet-name>
 <url-pattern>/login</url-pattern>
+</servlet-mapping>
+<servlet-mapping>
+<servlet-name>Manage</servlet-name>
+<url-pattern>/manage</url-pattern>
 </servlet-mapping>
 <servlet-mapping>
 <servlet-name>Password</servlet-name>
@@ -39,6 +51,10 @@
 <servlet-mapping>
 <servlet-name>Add</servlet-name>
 <url-pattern>/add</url-pattern>
+</servlet-mapping>
+<servlet-mapping>
+<servlet-name>Transaction</servlet-name>
+<url-pattern>/transaction</url-pattern>
 </servlet-mapping>
 <servlet-mapping>
 <servlet-name>Change</servlet-name>
