--- a/ZCoin/src/main/webapp/WEB-INF/web.xml
+++ b/ZCoin/src/main/webapp/WEB-INF/web.xml
@@ -29,6 +29,10 @@
 <servlet-class>password.ChangePassword</servlet-class>
 </servlet>
 <servlet>
+<servlet-name>Logout</servlet-name>
+<servlet-class>logout.LogoutServlet</servlet-class>
+</servlet>
+<servlet>
 <servlet-name>Transaction</servlet-name>
 <servlet-class>transaction.TransactionServlet</servlet-class>
 </servlet>
@@ -59,5 +63,9 @@
 <servlet-mapping>
 <servlet-name>Change</servlet-name>
 <url-pattern>/change</url-pattern>
+</servlet-mapping>
+<servlet-mapping>
+<servlet-name>Logout</servlet-name>
+<url-pattern>/logout</url-pattern>
 </servlet-mapping>
 </web-app>
