--- a/ZCoin/src/main/webapp/WEB-INF/web.xml
+++ b/ZCoin/src/main/webapp/WEB-INF/web.xml
@@ -6,31 +6,31 @@
   </welcome-file-list>
  <servlet>
 <servlet-name>Login</servlet-name>
-<servlet-class>login.LoginServlet</servlet-class>
+<servlet-class>servlet.LoginServlet</servlet-class>
 </servlet>
 <servlet>
 <servlet-name>Password</servlet-name>
-<servlet-class>login.PasswordServlet</servlet-class>
+<servlet-class>servlet.PasswordServlet</servlet-class>
 </servlet>
 <servlet>
 <servlet-name>SignUp</servlet-name>
-<servlet-class>signup.SignupServlet</servlet-class>
+<servlet-class>servlet.SignupServlet</servlet-class>
 </servlet>
 <servlet>
 <servlet-name>Manage</servlet-name>
-<servlet-class>manage.ManageServlet</servlet-class>
+<servlet-class>servlet.ManageServlet</servlet-class>
 </servlet>
 <servlet>
 <servlet-name>Add</servlet-name>
-<servlet-class>add.AddServlet</servlet-class>
+<servlet-class>servlet.AddServlet</servlet-class>
 </servlet>
 <servlet>
 <servlet-name>Change</servlet-name>
-<servlet-class>password.ChangePassword</servlet-class>
+<servlet-class>servlet.ChangePassword</servlet-class>
 </servlet>
 <servlet>
 <servlet-name>Logout</servlet-name>
-<servlet-class>logout.LogoutServlet</servlet-class>
+<servlet-class>servlet.LogoutServlet</servlet-class>
 </servlet>
 <servlet>
 <servlet-name>Transaction</servlet-name>
