--- a/ZCoin/src/main/webapp/WEB-INF/web.xml
+++ b/ZCoin/src/main/webapp/WEB-INF/web.xml
@@ -34,7 +34,7 @@
 </servlet>
 <servlet>
 <servlet-name>Transaction</servlet-name>
-<servlet-class>transaction.TransactionServlet</servlet-class>
+<servlet-class>servlet.TransactionServlet</servlet-class>
 </servlet>
 <servlet-mapping>
 <servlet-name>Login</servlet-name>
