--- a/ZCoin/src/main/webapp/WEB-INF/web.xml
+++ b/ZCoin/src/main/webapp/WEB-INF/web.xml
@@ -2,11 +2,15 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <display-name>ZCoin</display-name>
   <welcome-file-list>
-    <welcome-file>Login.jsp</welcome-file>
+    <welcome-file>SelectDb.jsp</welcome-file>
   </welcome-file-list>
  <servlet>
 <servlet-name>Login</servlet-name>
 <servlet-class>servlet.LoginServlet</servlet-class>
+</servlet>
+<servlet>
+<servlet-name>Select</servlet-name>
+<servlet-class>servlet.SelectDb</servlet-class>
 </servlet>
 <servlet>
 <servlet-name>Password</servlet-name>
@@ -39,6 +43,10 @@
 <servlet-mapping>
 <servlet-name>Login</servlet-name>
 <url-pattern>/login</url-pattern>
+</servlet-mapping>
+<servlet-mapping>
+<servlet-name>Select</servlet-name>
+<url-pattern>/select</url-pattern>
 </servlet-mapping>
 <servlet-mapping>
 <servlet-name>Manage</servlet-name>
